# BlogLikho---Django-Blog-App

./: README.md  pyproject.toml
blog_main/: settings.py  urls.py  views.py
blogs/: admin.py  models.py
blogs/migrations/: 0001_initial.py  0002_alter_category_options_blog.py  0003_alter_blog_status.py
templates/: home-blogs.html
