[project]
name = "bloglikho"
version = "0.1.0"
description = "Django Blog App"
authors = [
    {name = "ankitraj20616",email = "ankitrajthakur803@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django (<6.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
